// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Custom size togglers 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-cTQhss kaJuxj rts-toggle__container undefined"
    data-element="toggle"
    height={12.5}
    width={25}
  >
    <input
      className="sc-dPyBCJ dEIBpX rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR hgWkJg rts-toggle__background"
      data-element="toggle-background"
      height={12.5}
    />
  </div>
  <div
    className="sc-cTQhss gnlxse rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-dPyBCJ gjIEqq rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR iLLATP rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
  <div
    className="sc-cTQhss doyONA rts-toggle__container undefined"
    data-element="toggle"
    height={37.5}
    width={75}
  >
    <input
      className="sc-dPyBCJ hFfvwa rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR cfzhEM rts-toggle__background"
      data-element="toggle-background"
      height={37.5}
    />
  </div>
  <div
    className="sc-cTQhss fsQYEX rts-toggle__container undefined"
    data-element="toggle"
    height={50}
    width={100}
  >
    <input
      className="sc-dPyBCJ dchTyR rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR gkwjIu rts-toggle__background"
      data-element="toggle-background"
      height={50}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle checked 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-cTQhss gnlxse rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      checked={true}
      className="sc-dPyBCJ gjIEqq rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR iLLATP rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle unchecked 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-cTQhss gnlxse rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-dPyBCJ gjIEqq rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-jOrMOR iLLATP rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;
